@@ -1,4 +1,9 @@
-2020-05-23  Joel Brobecker  <brobecker@adacore.com>
+2020-05-06  Simon Marchi  <simon.marchi@efficios.com>
+
+	* amd64-tdep.c (amd64_analyze_prologue): Check for `endbr64`
+	instruction, skip it if it's there.
+
+2020-05-05  Simon Marchi  <simon.marchi@efficios.com>
 
 	* version.in: Set GDB version number to 9.2.
 
